--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body{
   text-shadow: 1px 1px 1px #000;
 } */
 
-.example-block{
+/* .example-block{
   m
   max-width: 800px;
   border: 1px solid black;
@@ -78,4 +78,4 @@ body{
   padding: 20px;
   width: 250px;
   border: 1px solid red;
-}
+} */
