--- a/css/second__page.css
+++ b/css/second__page.css
@@ -1,9 +1,8 @@
 @import url("nullstyle.css");
 
-textarea{
-    border: 2px black solid;
-}
-
 h1{
     text-align: center;
+}
+body{
+    background-color: aqua;
 }
